--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
   <div id="app">
     <v-app>
       <v-content>
-        <v-container>Hello world</v-container>
+        <v-container>SUNWLAB 환영합니다</v-container>
       </v-content>
     </v-app>
   </div>
