--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,15 @@
       <v-content>
         <v-container>SUNWLAB 환영합니다</v-container>
       </v-content>
-    </v-app>
+       <v-navigation-drawer app></v-navigation-drawer>
+      <v-toolbar app></v-toolbar>
+      <v-content>
+        <v-container fluid>
+          <router-view></router-view>
+       </v-container>
+     </v-content>
+     <v-footer app></v-footer>
+   </v-app>
   </div>
  
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
